Wed Apr 25 07:02:16 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Get_Opt.cpp:
          Reverted Wed Apr 18 08:51:31 UTC 2012  Martin Corino  <mcorino@remedy.nl>

Tue Apr 24 01:18:27 UTC 2012  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/String_Base.h (template): Zapped the 'explicit' keywords
          introduced by the change in

          Tue Apr 17 19:09:30 UTC 2012  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

          since it was breaking too much code.

Wed Apr 18 08:51:31 UTC 2012  Martin Corino  <mcorino@remedy.nl>

        * ace/String_Base.h:
          Reverted 'explicit' declaration for single arg constructor for
          const ACE_TCHAR* as implicit conversion of this arg type to
          ACE string class is the expected behaviour (similar to the
          STL std::string).

        * ace/Get_Opt.cpp:
          Introduced explicit ACE_CString constructor call for single
          arg ACE_TCHAR (not pointer) constructor.

Wed Apr 18 06:31:56 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Future.cpp:
          Fixed commented out guard. Thanks to Andreas Dröscher
          <ace at anticat dot ch> for reporting this.

Tue Apr 17 19:09:30 UTC 2012  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/String_Base.h: Made the single parameter constructors
          explicit to avoid problems with implict conversions.  Thanks to
          Adam Rymarczuk <adam dot rymarczuk at suntradingllc dot com> for
          reporting this.

Thu Apr 12 11:25:25 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_linux_icc.GNU:
          Added support for c++0x

Tue Apr 10 20:09:23 UTC 2012  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Dev_Poll_Reactor.cpp (ACE_Dev_Poll_Reactor::resumable_handler):
          Changed this method to return 1 instead of 0.  Thanks to David