@@ -94,11 +94,11 @@ inline long ace_timezone()
 
 
 #if !defined (ACE_LACKS_DIFFTIME)
-# if defined (_WIN32_WCE) && (_WIN32_WCE == 0x600) && !defined (_USE_32BIT_TIME_T) \
+# if defined (_WIN32_WCE) && ((_WIN32_WCE >= 0x600) && (_WIN32_WCE <= 0x700)) && !defined (_USE_32BIT_TIME_T) \
     && defined (_MSC_VER)
-    // The WinCE 6.0 SDK ships with a diff_time that uses __time32_t as type
+    // The WinCE 6.0/7.0 SDK ships with a diff_time that uses __time32_t as type
     // not time_t. This resolves in compilation warnings because time_t
-    // can be 64bit. Disable at this momemt the warning for just this method
+    // can be 64bit. Disable at this moment the warning for just this method
     // else we get two compile warnings on each source file that includes
     // this file.
 #   pragma warning (push)
@@ -117,7 +117,7 @@ inline double ace_difftime(time_t t1, time_t t0)
 {
   return difftime (t1, t0);
 }
-# if defined (_WIN32_WCE) && (_WIN32_WCE == 0x600) && !defined (_USE_32BIT_TIME_T) \
+# if defined (_WIN32_WCE) && ((_WIN32_WCE >= 0x600) && (_WIN32_WCE <= 0x700)) && !defined (_USE_32BIT_TIME_T) \
     && defined (_MSC_VER)
 #   pragma warning (pop)
 # endif
