@@ -57,10 +57,10 @@
 # define ACE_FILENO_EQUIVALENT(X) (_get_osfhandle (::_fileno (X)))
 #endif
 
-// Windows Mobile 6 doesn't do sig_atomic_t, but maybe future versions will.
-#  if !defined (_WIN32_WCE) || (_WIN32_WCE > 0x601)
+// Windows CE 7 doesn't do sig_atomic_t, but maybe future versions will.
+#  if !defined (_WIN32_WCE) || (_WIN32_WCE > 0x700)
 #    define ACE_HAS_SIG_ATOMIC_T
-#  endif /* !Win CE 6.0 or less */
+#  endif /* !Win CE 7.0 or less */
 
 #define ACE_LACKS_STRPTIME
 
