@@ -1,3 +1,9 @@
+Fri Apr 27 18:40:51 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ace/OS_NS_time.h:
+        * ace/config-win32-msvc-9.h:
+          First fixes for WinCE 7
+
 Wed Apr 25 07:02:16 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ace/Get_Opt.cpp:
